--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "repair-hub",
-  "version": "0.2.0",
+  "name": "app-2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.300.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "framer-motion": "^11.0.0" 
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "next": "^14.2.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.0",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0"
   }
 }
